add: add free slots throughput 2
