# api/vgsocket/swagger.yaml
@@ -84,8 +84,8 @@ paths:
                 format: uuid
                 description: Brigade ID
       responses:
-        "204":
-          description: No Content
+        "200":
+          description: OK
           schema:
             $ref: "#/definitions/FreeSlots"
         "400":
